# fedora-cosmic-atomic-ewt

./: .gitignore  COSMIC_SHORTCUTS_RESEARCH.md  README.md  cosign.pub
.github/workflows/: build.yml
.serena/: project.yml
cosmic-vimified/: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
cosmic-vimified/benches/: hint_generation.rs
cosmic-vimified/docs/: ARCHITECTURE.md  DEVELOPMENT.md  IMPLEMENTATION_ROADMAP.md  INSTALL_HINTS.md  LAYERSHELL_STATUS.md  OVERLAY_STATUS.md  PHASE2_COMPLETE.md  PLANNING_SUMMARY.md  SPEC.md  TASK_LIST.md  TECHNICAL_RESEARCH.md  TEST_PHASE1.md
cosmic-vimified/examples/: config.ron.example
cosmic-vimified/files/system/etc/udev/rules.d/: 99-cosmic-vimified.rules
cosmic-vimified/scripts/: dev-build.sh
cosmic-vimified/src/: app.rs  cli.rs  commands.rs  daemon.rs  layershell_app.rs  main.rs
cosmic-vimified/src/detection/: atspi.rs  filters.rs  mod.rs  types.rs
cosmic-vimified/src/hints/: generator.rs  layout.rs  mod.rs
cosmic-vimified/src/overlay/: canvas.rs  input.rs  mod.rs  positioned.rs  renderer.rs  styles.rs  widgets.rs
docs/: forgejo-runner-um790-plan.md
files/forgejo-runner/: README.md  forgejo-runner.service  setup-forgejo-runner.sh
files/scripts/: setup-libvirt.sh
files/system/etc/: tlp.conf
files/system/usr/lib/systemd/system-preset/: 80-virtualization.preset
modules/forgejo-runner/: config.yaml.j2
recipes/: recipe.yml
