[package]
name = "cosmic-vimified"
version = "0.1.0"
edition = "2021"
authors = ["dverdonschot"]
description = "Keyboard-driven hint navigation for COSMIC desktop environment"
license = "TBD"
repository = "https://github.com/dverdonschot/fedora-cosmic-atomic-ewt"
keywords = ["cosmic", "keyboard", "hints", "vimium", "accessibility"]
categories = ["gui", "accessibility"]

[dependencies]
# COSMIC libraries
libcosmic = { git = "https://github.com/pop-os/libcosmic" }
cosmic-config = { git = "https://github.com/pop-os/libcosmic" }

# Accessibility - AT-SPI for element detection
atspi = "0.19"
atspi-common = "0.3"
atspi-connection = "0.3"
zbus = "4.0"  # Required by atspi for D-Bus communication

# Input synthesis - uinput for mouse click simulation
mouse-keyboard-input = "0.7"

# Serialization for config
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
# Testing utilities
# mockall = "0.12"
# proptest = "1.4"

[profile.release]
# Optimize for size and performance
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
# Fast compile times for development
opt-level = 0
debug = true

# Note: Many dependencies commented out until we start implementation
# Uncomment and add specific versions as needed during development
