[package]
name = "cosmic-vimified"
version = "0.1.0"
edition = "2021"
authors = ["COSMIC Vimified Contributors"]
description = "Vimium-style keyboard navigation for COSMIC desktop environment"
license = "GPL-3.0-or-later"
repository = "https://github.com/dverdonschot/fedora-cosmic-atomic-ewt"

[dependencies]
# iced_layershell - Wayland layer shell for iced
iced = { version = "0.13", features = ["tokio", "advanced"] }
iced_runtime = "0.13"
iced_layershell = { version = "0.13" }

# AT-SPI for accessibility tree querying
atspi = { version = "0.29", default-features = false, features = ["zbus", "tokio", "connection", "proxies"] }
atspi-proxies = { version = "0.13", default-features = false }
atspi-connection = { version = "0.13", default-features = false }

# Input synthesis
uinput = "0.1"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# CLI and D-Bus
clap = { version = "4.5", features = ["derive"] }
zbus = "5.2"
once_cell = "1.20"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization for config
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# Testing utilities
criterion = "0.5"

[[bench]]
name = "hint_generation"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
